platform/ai/kubernetes/ui-http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kgateway-http-route
  namespace: ai
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ai.homelab.internal
spec:
  parentRefs:
  - name: homelab-internal-gateway
    namespace: kube-system
  hostnames:
  - "ai.homelab.internal"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kagent-ui
      kind: Service
      port: 8080
